fixed bug #27530: Failed test: Seitenlisten - menu entries cut off by new page layout

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -14747,6 +14747,10 @@ li.ilWikiBlockItem {
   margin: 0;
   padding: 0;
 }
+/* see mantis #0027530 */
+#block_wikiside_0 .panel-body {
+  overflow: visible;
+}
 #ilTopNav {
   margin: -38px 0 0 65px;
 }
